<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/llBackground"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#E0F0FF"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tvCID"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="3dp"
                    android:layout_weight="1.5"
                    android:text="@string/cid"
                    android:textColor="@color/colorPrimary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="5.5"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:maxLines="2"
                        android:text="@string/name"
                        android:textColor="@color/darkblack"
                        android:textSize="14sp" />
                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/rlChecked"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/ivUnchecked"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_unchecked"
                        app:tint="@color/colorBlue" />

                    <ImageView
                        android:id="@+id/ivChecked"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_checked"
                        android:visibility="gone"
                        app:tint="@color/colorBlue" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/tvLiters"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1.5"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llAddMilk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/et_bg_with_stock"
            android:orientation="vertical"
            android:padding="10dp"
            android:visibility="gone">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/evening"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llmilkliters"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/white_bg_stoke"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/milk_in_liters"
                    android:textColor="@color/darkblack"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <EditText
                    android:id="@+id/edtLiters"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/et_bg_with_stock"
                    android:backgroundTint="@color/colorBlue"
                    android:hint="@string/litres"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="12dp"
                    android:paddingVertical="7dp"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@drawable/cursur_tint"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tv0.5Liters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/et_bg_with_stock"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="0.5"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv1Liters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/et_bg_with_stock"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="1.0"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv1.5Liters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/et_bg_with_stock"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="1.5"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv2Liters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/et_bg_with_stock"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="2.0"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal" />

                    <TextView
                        android:id="@+id/tv2.5Liters"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:background="@drawable/et_bg_with_stock"
                        android:backgroundTint="@color/colorPrimary"
                        android:paddingHorizontal="10dp"
                        android:paddingVertical="5dp"
                        android:text="2.5"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="normal" />
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/tvCancle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/et_bg_with_stock"
                    android:backgroundTint="@color/colorPrimary"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/tvSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@drawable/et_bg_with_stock"
                    android:backgroundTint="@color/colorBlue"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="5dp"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="normal" />
            </RelativeLayout>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            android:background="@color/darkblack" />
    </LinearLayout>
</layout>